# mlx-swift-dots-tts

./: .gitignore  Makefile  Package.swift  README.md
Sources/DotsTTS/Audio/: Resampler.swift
Sources/DotsTTS/Backbone/: Qwen2Backbone.swift
Sources/DotsTTS/DiT/: DiT.swift
Sources/DotsTTS/FlowMatching/: EulerSolver.swift
Sources/DotsTTS/Pipeline/: DotsTTSPipeline.swift  TextSchedule.swift
Sources/DotsTTS/Reference/: PatchEncoder.swift
Sources/DotsTTS/Speaker/: Fbank.swift
Tests/DotsTTSTests/: DiTParityTests.swift  DotsLanguageTagTests.swift  EndToEndTests.swift  KVCacheConsistencyTests.swift  MaskedSolverParityTests.swift  ResamplerParityTests.swift  VocoderBenchTests.swift
app/: Makefile  Package.swift  README.md
app/Sources/dots-tts/: Chunking.swift  DotsTTSApp.swift  DotsTTSCLI.swift  DotsTTSDaemon.swift  ReferenceSample.swift  TTSSession.swift  WAVIO.swift
docs/: fable-review-1.md
oc-interactive/: Makefile  README.md  pyproject.toml  run
oc-interactive/config/: openclaw.example.json
oc-interactive/oc_interactive/: __init__.py  __main__.py  cli.py  client.py  config.py  daemon.py  io.py  ipc.py  openclaw.py  paths.py  session.py  slash.py  speakable.py  tts.py  tts_daemon.py
