[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "oc-interactive"
version = "0.1.0"
description = "OpenClaw agent + dots-tts voice CLI for macOS"
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
oc-interactive = "oc_interactive.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["oc_interactive*"]
